Verbesserte mobile Schriftgrößen und Button-Abstände

--- a/components/header.html
+++ b/components/header.html
@@ -4,9 +4,8 @@
       <img src="gfx/logo_menu.png" alt="Kidos Tools" class="logo-image" height="70" />
     </div>
     <nav class="nav-links">
-      <a href="../index.html" class="nav-link">Home</a>
-      <a href="#" class="nav-link">Dokumentation</a>
-      <a href="#" class="nav-link">Über</a>
+      <a href="javascript:history.back()" class="nav-link">← Zurück</a>
+      <a href="../index.html" class="nav-link">⌂ Home</a>
     </nav>
   </div>
 </header>
