Kategorie und Unterkategorie: dunkle Hintergründe, größere und fette Schrift, mittig/fett für alle Farbkonzepte

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,4 @@
 <footer class="footer">
-  © 2025 Benjamin Geisler – Kidos Tools – 
-  <a href="https://www.benjamingeisler.de/" target="_blank" rel="noopener noreferrer"> benjamingeisler.de</a>
-  | <a href="templates/impressum.html"> Impressum</a>
+  © 2025 Benjamin Geisler – Kidos Tools –
+  &nbsp;<a href="https://www.benjamingeisler.de/" target="_blank" rel="noopener noreferrer">benjamingeisler.de</a>&nbsp;|&nbsp;<a href="templates/impressum.html">Impressum</a>&nbsp;
 </footer>
