--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,9 @@
 <header class="header">
   <div class="header-content">
     <div class="logo-section">
-      <img src="gfx/logo_menu.png" alt="Kidos Tools" class="logo-image" height="70" />
+      <a href="../index.html">
+        <img src="gfx/logo_menu.png" alt="Kidos Tools" class="logo-image" height="70" />
+      </a>
     </div>
     <nav class="nav-links">
       <a href="javascript:history.back()" class="nav-link">← Zurück</a>
